...
    <string name="notification_channel">default.channel</string>
    <string name="notification_rewind_action">REWIND</string>
    <string name="notification_pause_action">PAUSE</string>
    <string name="notification_fast_forward_action">FAST FORWARD</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_interval_title">Add Interval</string>
    <string name="submit">Submit</string>
    <string name="add_interval_cancel_dialog_text">Cancel</string>
    <string name="add_interval_add_dialog_text">Add</string>
    <string name="add_interval_reps_toggle_text">Reps</string>
    <string name="add_interval_timer_toggle_text">Timer</string>
    <string name="add_interval_timers_reps_toggle_button">RepsTimerToggleButton</string>
    <string name="add_interval_name_hint_text">Interval Name</string>
    <string name="add_interval_active_text">Active</string>
...
