<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/workoutNameText"
                android:layout_width="253dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="Sample Workout"
                android:textAlignment="textStart"
                android:textColor="@color/fontPrimary"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/stopwatchView"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/workoutTimeText"
                app:layout_constraintEnd_toStartOf="@+id/workoutTimeText"
                app:layout_constraintTop_toTopOf="@+id/workoutTimeText"
                app:srcCompat="@drawable/ic_stopwatch" />

            <TextView
                android:id="@+id/workoutTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="10:05"
                android:textAlignment="center"
                android:textColor="@color/fontSecondary"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/workoutNameText"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/favoriteButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/ic_star_empty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/editButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/ic_edit"
                app:layout_constraintBottom_toBottomOf="@+id/favoriteButton"
                app:layout_constraintEnd_toStartOf="@+id/favoriteButton"
                app:layout_constraintTop_toTopOf="@+id/favoriteButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>